# ralph

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
ralph/: __init__.py  __main__.py  archive.py  cli.py  config.py  console.py  conversation.py  limit_detector.py  logging_config.py  meters.py  p90.py  prd.py  pricing.py  process.py  reeval.py  runner.py  session.py  state.py  tasks.py  twophase.py  usage.py  usage_stream.py
ralph/dashboard/: __init__.py  reporter.py  server.py  sources.py  static.py
tests/: conftest.py  test_adaptive_pacing.py  test_cli_usage.py  test_config.py  test_dashboard_reporter.py  test_dashboard_server.py  test_dashboard_sources.py  test_fixtures.py  test_limit_detector.py  test_meters.py  test_p90.py  test_preflight.py  test_pricing.py  test_reeval.py  test_runner_integration.py  test_session.py  test_session_claims.py  test_twophase.py  test_usage.py  test_usage_stream.py
tests/fixtures/: __init__.py  edge_cases.jsonl  high_usage.jsonl  malformed.jsonl  session_mixed_models.jsonl  session_opus.jsonl  single_session.jsonl
