[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ralph"
version = "0.1.0"
description = "Autonomous AI agent loop for executing PRD-driven development"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Ralph Authors" }
]
keywords = ["ai", "agent", "automation", "development"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-xdist>=3.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
ralph = "ralph.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["ralph"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-n auto -m 'not slow'"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
